| Summary: | ASTERISK-19646: Fix typo \n in chan_sip SDP negotiation warning message | ||
| Reporter: | Badalian Vyacheslav (slavon) | Labels: | |
| Date Opened: | 2012-04-06 05:33:17 | Date Closed: | 2012-04-06 09:02:54 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Core/General |
| Versions: | 1.8.10.1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | [Apr 6 14:33:59] WARNING[4183]: chan_sip.c:8949 process_sdp: ignoring 'video' media offer because port number is zero == Spawn extension (phones, 89064538011, 2) exited non-zero on 'SIP/224-00000a9b' after "[Apr 6 14:33:59] WARNING[4183]: chan_sip.c:8949 process_sdp: ignoring 'video' media offer because port number is zero" must be \n | ||
| Comments: | |||